@@ -6,6 +6,7 @@
 		<div class="itemCmsInfo_title">
 			<h2><{$cms_start.title}> <{if $cms_is_admin}><{$cms_start.editItemLink}> <{$cms_start.deleteItemLink}><{/if}></h2>
 			<{if $show_extension_print == TRUE}><a href="print.php?start_id=<{$cms_start.start_id}>" rel="nofollow" title="<{$smarty.const._MD_CMS_PRINT}>" target="_blank"><img style="vertical-align: middle;" alt="<{$smarty.const._MD_CMS_PRINT}>" title="<{$smarty.const._MD_CMS_PRINT}>" src="<{$smarty.const.ICMS_IMAGES_SET_URL}>/actions/fileprint.png" /></a><{/if}>
+			<{if $cms_start.subtitle}><h3><{$cms_start.subtitle}></h3><{/if}>
 			<{if $cms_post_comment}><div class="itemCmsInfoComment"><{$cms_start.start_comment_info}></div><{/if}>
 		</div>
 		<{if $cms_start.counter || $cms_start.updated}>
@@ -84,6 +85,7 @@
 			<h2 class="cms_separator cms_clear">
 				<a href="<{$start.itemUrl}>"><{$start.title}></a> <{if $cms_is_admin}><{$cms_start.editItemLink}> <{$cms_start.deleteItemLink}><{/if}>
 			</h2>
+			<{if $start.subtitle}><h3><{$start.subtitle}></h3><{/if}>
 			<{if $cms_post_comment}><div class="itemCmsInfoComment"><{$start.start_comment_info}></div><{/if}>
 			</div>
 			<div class="itemCmsInfo">
